--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,50 +4,27 @@ title: Le Wagon - Middleman
 
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
   <div class="banner-content">
-    <h1>Le Wagon Berlin</h1>
-    <p>Learn to code with us in Berlin</p>
-    <a class="btn btn-primary btn-lg">Start now</a>
+    <h1>Le Wagon destinations</h1>
+    <p>Learn to code with us in the city of your choice</p>
+    <a class="btn btn-primary btn-lg">Random destination</a>
   </div>
 </div>
-
 
 <div class="container">
   <div class="cards text-center">
-    <h2>Recent flats</h2>
-    <div class="col-xs-12 col-sm-4">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/paris');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Le Wagon Paris</h2>
-          <p>Very cool city, the best</p>
+    <h2>Popular destinations</h2>
+    <% data.cities.each do |city| %>
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/<%= city.slug %>');">
+          <div class="card-category">Popular</div>
+          <div class="card-description">
+            <h2><%= city.name %></h2>
+            <p><%= city.driver %></p>
+          </div>
+          <img class="card-user" src="https://kitt.lewagon.com/placeholder/cities/<%= city.driver %>">
+          <a class="card-link" href="#" ></a>
         </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/ssaunier">
-        <a class="card-link" href="#" ></a>
       </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Le Wagon Shanghai</h2>
-          <p>Cool city, not the best but is ok</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/london');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Le Wagon London</h2>
-          <p>Great city, second best</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/CharlyMartin">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
+    <% end %>
   </div>
 </div>
-
-
