--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -13,12 +13,14 @@ h2 {
   background-position: center;
   color: white;
   position: relative;
+  margin: 10px;
 }
 .card-user {
   position: absolute;
   right: 10px;
   top: 10px;
   width: 40px;
+  height:40px;
   border-radius: 50%;
 }
 .card-category {
@@ -40,6 +42,7 @@ h2 {
   font-size: 14px;
   opacity: 0.7;
   font-weight: lighter;
+  color: white;
 }
 .card-link {
   position: absolute;
