--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -4,7 +4,7 @@
 $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #FDB631;
-$orange: #E67E22;
+$orange: #ed4301;
 $green: #32B796;
-$gray: #000000;
+$gray: #333333;
 $light-gray: #F4F4F4;
